[package]
name = "easy-archiver"
version = "0.1.9"
edition = "2021"

[dependencies]
flate2 = "1.0.30"
zip = "2.1.6"
tar = "0.4.41"
anyhow = "1.0.44"
sevenz-rust = "0.6.1"
# zip requiles bzip2 be on 0.4
bzip2 = "0.4"
xz2 = "0.1.7"
walkdir = "2.5.0"
anyhow-source-location = "0.2.1"
sha256 = "1.5.0"
printer = { git = "https://github.com/work-spaces/printer-rs", rev = "v0.1.12", optional = true }
glob-match = "0.2.1"
serde = "1"


[features]
default = ["printer"]
printer = ["dep:printer"]
