[package]
name = "spaces-archiver"
version = "0.2.0"
edition = "2021"

[dependencies]
flate2 = "1"
zip = "2"
tar = "0.4"
anyhow = "1"
sevenz-rust = "0.6"
# zip requiles bzip2 be on 0.4
bzip2 = "0.4"
xz2 = "0.1"
walkdir = "2"
anyhow-source-location = "0.2"
sha256 = "1"
printer = { package = "spaces-printer", git = "https://github.com/work-spaces/spaces-printer", rev = "v0.2.0", optional = true }
glob-match = "0.2"
serde = "1"


[features]
default = ["printer"]
printer = ["dep:printer"]
